<resources>
    <string name="app_name">Repro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_pemasok">Pemasok</string>
    <string name="menu_pengelola">Pengelola</string>
    <string name="menu_harga_ban">Harga Ban</string>

    <string-array name="jenis_kendaraan_array">
        <item>Mobil</item>
        <item>Motor</item>
        <item>Truk</item>
        <item>Bus</item>
        <item>Sepeda</item>
    </string-array>
</resources>