<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_pemasok"
            android:icon="@drawable/ic_description"
            android:title="@string/menu_pemasok" />

        <item
            android:id="@+id/nav_pengelola"
            android:icon="@drawable/ic_description"
            android:title="@string/menu_pengelola" />

        <item
            android:id="@+id/nav_harga_ban"
            android:icon="@drawable/ic_basket"
            android:title="@string/menu_harga_ban" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
