<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.repro.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pengelola"
        android:name="com.example.repro.ui.pengelola.PengelolaFragment"
        android:label="@string/menu_pengelola"
        tools:layout="@layout/fragment_pengelola" />

    <fragment
        android:id="@+id/nav_harga_ban"
        android:name="com.example.repro.ui.harga_ban.HargaBanFragment"
        android:label="@string/menu_harga_ban"
        tools:layout="@layout/fragment_harga_ban" />

    <fragment
        android:id="@+id/nav_pemasok"
        android:name="com.example.repro.ui.pemasok.PemasokFragment"
        android:label="@string/menu_pemasok"
        tools:layout="@layout/fragment_pemasok" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.repro.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.repro.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>